# SceneComplete

./: .gitignore  .gitmodules  README.md  pyproject.toml
scenecomplete/modules/FoundationPose/: Utils.py  datareader.py  estimater.py  run_demo.py  run_linemod.py  run_ycb_video.py
scenecomplete/modules/FoundationPose/learning/datasets/: h5_dataset.py  pose_dataset.py
scenecomplete/modules/FoundationPose/learning/models/: network_modules.py  refine_network.py  score_network.py
scenecomplete/modules/FoundationPose/learning/training/: predict_pose_refine.py  predict_score.py
scenecomplete/modules/InstantMesh/configs/: instant-mesh-base.yaml  instant-mesh-large.yaml
scenecomplete/modules/InstantMesh/src/utils/: camera_util.py
scenecomplete/modules/weights/: download_weights.sh
scenecomplete/scripts/: install_all.sh
scenecomplete/scripts/bash/: scenecomplete.sh
scenecomplete/scripts/python/: generate_scene_prompts.py
scenecomplete/scripts/python/inpainting/: inpaint_objects.py
scenecomplete/scripts/python/inpainting/utils/: inpainting_utils.py
scenecomplete/scripts/python/prompting/: generate_scene_prompts.py
scenecomplete/scripts/python/prompting/utils/: prompt_utils.py
scenecomplete/scripts/python/reconstruction/: generate_3d_mesh.py
scenecomplete/scripts/python/reconstruction/utils/: mesh_generation_utils.py  prepare_3d_inputs.py
scenecomplete/scripts/python/registration/: register_mesh.py
scenecomplete/scripts/python/registration/utils/: registration_utils.py
scenecomplete/scripts/python/scaling/: compute_mesh_scaling.py  scaling_utils.py
scenecomplete/scripts/python/segmentation/: segment_objects.py  segment_objects_post_inpainting.py
scenecomplete/scripts/python/segmentation/utils/: segment_config.yaml  segmentation_processor.py
scenecomplete/utils/: visualization.py  visualize_pointcloud.py
scripts/python/: generate_scene_prompts.py
scripts/python/inpainting/: inpaint_objects.py
scripts/python/inpainting/utils/: inpainting_utils.py
scripts/python/reconstruction/utils/: mesh_generation_utils.py
scripts/python/segmentation/: segment_objects.py  segment_objects_post_inpainting.py
scripts/python/segmentation/utils/: segment_config.yaml  segmentation_processor.py  segmentation_utils.py
