[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scenecomplete"
version = "0.1.0"
description = "An open-world 3D scene completion system that constructs a complete, segmented, 3D model of a scene from a single RGB-D image."
authors = [
  { name = "Aditya Agarwal", email = "adityaag@mit.edu" },
  { name = "Gaurav Singh", email = "gaurav.si@research.iiit.ac.in" },
  { name = "Bipasha Sen", email = "bise@mit.edu" },
  { name = "Leslie Kaelbling", email = "lpk@mit.edu" },
  { name = "Tomás Lozano-Pérez", email = "tlp@mit.edu" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["completion", "robotics"]
classifiers = [
  "Programming Language :: Python :: 3",
]

# Pinned dependencies
dependencies = [
  "accelerate==1.5.2",
  "addict==2.4.0",
  "aiohappyeyeballs==2.6.1",
  "aiohttp==3.11.13",
  "aiosignal==1.3.2",
  "antlr4-python3-runtime==4.9.3",
  "asttokens==3.0.0",
  "async-timeout==5.0.1",
  "attrs==25.3.0",
  "blinker==1.9.0",
  "coloredlogs==15.0.1",
  "comm==0.2.2",
  "configargparse==1.7",
  "contourpy==1.3.0",
  "dash==2.18.2",
  "dash-core-components==2.0.0",
  "dash-html-components==2.0.0",
  "dash-table==5.0.0",
  "decorator==5.2.1",
  "defusedxml==0.7.1",
  "diffusers==0.27.0.dev0",
  "einops==0.7.0",
  "exceptiongroup==1.2.2",
  "executing==2.2.0",
  "fastjsonschema==2.21.1",
  "filelock==3.13.1",
  "flask==3.0.3",
  "flatbuffers==25.2.10",
  "fonttools==4.56.0",
  "frozenlist==1.5.0",
  "fsspec==2024.6.1",
  "groundingdino==0.1.0",
  "huggingface-hub==0.23.2",
  "humanfriendly==10.0",
  "idna==3.4",
  "imageio==2.37.0",
  "importlib-metadata==8.6.1",
  "importlib-resources==6.5.2",
  "ipython==8.18.1",
  "ipywidgets==8.1.5",
  "itsdangerous==2.2.0",
  "jedi==0.19.2",
  "jinja2==3.1.4",
  "joblib==1.4.2",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2024.10.1",
  "jupyter-core==5.7.2",
  "jupyterlab-widgets==3.0.13",
  "kiwisolver==1.4.7",
  "lazy-loader==0.4",
  "lightning-utilities==0.14.0",
  "llvmlite==0.43.0",
  "markupsafe==2.1.5",
  "matplotlib==3.9.4",
  "matplotlib-inline==0.1.7",
  "mpmath==1.3.0",
  "multidict==6.1.0",
  "narwhals==1.30.0",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "networkx==3.2.1",
  "ninja==1.11.1.3",
  "numba==0.60.0",
  "numpy==1.26.3",
  "nvdiffrast==0.3.3",
  "omegaconf==2.3.0",
  "onnxruntime==1.19.2",
  "open3d==0.18.0",
  "opencv-python==4.11.0.86",
  "opencv-python-headless==4.11.0.86",
  "packaging==24.2",
  "pandas==2.2.3",
  "parso==0.8.4",
  "peft==0.12.0",
  "pexpect==4.9.0",
  "pillow==11.0.0",
  "platformdirs==4.3.6",
  "plotly==6.0.0",
  "pooch==1.8.2",
  "prompt-toolkit==3.0.50",
  "propcache==0.3.0",
  "protobuf==6.30.1",
  "psutil==7.0.0",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "pycocotools==2.0.8",
  "pygments==2.19.1",
  "pymatting==1.1.13",
  "pyparsing==3.2.1",
  "pyquaternion==0.9.9",
  "python-dateutil==2.9.0.post0",
  "pytorch-lightning==2.0.0",
  "pytz==2025.1",
  "pyyaml==6.0.2",
  "referencing==0.36.2",
  "regex==2024.11.6",
  "rembg==2.0.56",
  "requests==2.28.1",
  "retrying==1.3.4",
  "rpds-py==0.23.1",
  "safetensors==0.5.3",
  "scikit-image==0.24.0",
  "scikit-learn==1.6.1",
  "scipy==1.13.1",
  "segment-anything==1.0", # Adjust if needed
  "sympy==1.13.1",
  "threadpoolctl==3.6.0",
  "tifffile==2024.8.30",
  "timm==1.0.15",
  "tokenizers==0.20.3",
  "torch==2.1.0+cu118",
  "torchaudio==2.1.0+cu118",
  "torchmetrics==1.6.3",
  "torchvision==0.16.0+cu118",
  "tqdm==4.67.1",
  "traitlets==5.14.3",
  "transformers==4.46.3",
  "trimesh==4.3.1",
  "triton==2.1.0",
  "typing-extensions==4.12.2",
  "tzdata==2025.1",
  "urllib3==1.26.13",
  "wcwidth==0.2.13",
  "werkzeug==3.0.6",
  "widgetsnbextension==4.0.13",
  "xatlas==0.0.9",
  "yapf==0.43.0",
  "yarl==1.18.3",
  "zipp==3.21.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scenecomplete*"]
